# tc_encoder_new

./: CMakeLists.txt  Readme.md  TCEncoder.cpp  TCEncoder.h  encoder_config.h  encoder_messages.h  ffmpeg_video_encoder.cpp  ffmpeg_video_encoder.h  nvenc_video_encoder.cpp  nvenc_video_encoder.h  readme.md  tc_encoder.cpp  tc_encoder.h  video_encoder.cpp  video_encoder.h  video_encoder_factory.cpp  video_encoder_factory.h
frame_render/: CMakeLists.txt  CommonTypes.h  FrameRender.cpp  FrameRender.h  Utilities.h
legacy/: AMFEncoder.cpp  AMFEncoder.h  CMakeLists.txt  D3DTextureDebug.cpp  NVENCoderClioptions.h  NvCodecUtils.h  NvEncoder.cpp  NvEncoderD3D11.cpp  NvEncoderD3D11.h  VideoEncoder.cpp  VideoEncoder.h  VideoEncoderFFmpeg.cpp  VideoEncoderFFmpeg.h  VideoEncoderNVENC.cpp  VideoEncoderNVENC.h  VideoEncoderVCE.cpp  VideoEncoderVCE.h  VideoEncoderVP9.cpp  VideoEncoderVP9.h  nvEncodeAPI.h
legacy/amf/common/: AMFSTL.h  TraceAdapter.h
legacy/amf/common/Windows/: ThreadWindows.cpp
legacy/shared/: CMakeLists.txt
nvencoder/12/: NvEncoderD3D11.cpp
tests/: CMakeLists.txt  test.cpp
